<resources>
    <string name="app_name">ollie_is_30</string>
    <string name="background_image">background image</string>
    <string name="question_number">question number</string>
    <string name="question">question</string>
    <string name="answer_1">answer 1</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_3">answer 3</string>
    <string name="answer_4">answer 4</string>
    <string name="skip">skip</string>
    <string name="log_out">log out</string>
    <string name="help">help</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="back_to_game">back to game</string>
    <string name="instructions">Instructions</string>
    <string name="reset">RESET</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="offlinemode">offlineMode</string>
    <string name="loginorregister">loginOrRegister</string>
    <string name="code">code</string>
    <string name="username">username</string>
    <string name="not_connected">Not Connected</string>
    <string name="reset_password">Reset Password</string>
    <string name="retype_password">retype password</string>
</resources>
